# X-Link

./: .gitignore  .release-please-config.json  AI_HANDOVER.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Document.md  LICENSE  README.md  SECURITY.md  eslint.config.js  index.html  package-lock.json  package.json  release-please-config.json  vite.config.ts
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: app.js  index.html  style.css
scripts/: setup-sidecars.cjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  compile_err.txt  compile_err_utf8.txt  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/newicons/: X-Link.af
src-tauri/src/: constants.rs  lib.rs  main.rs  state.rs  tray.rs
src-tauri/src/commands/: change_classifier.rs  config.rs  latency.rs  logs.rs  mod.rs  profiles.rs  proxy.rs  system.rs
src-tauri/src/config/: generator.rs  mod.rs  rules.rs  test.json  validator.rs
src-tauri/src/config/adapters/: clash.rs  mod.rs  raw_uri.rs
src-tauri/src/os/: mod.rs
src/components/: ErrorBoundary.tsx  NavRail.tsx  ToastContainer.tsx  TrafficChart.tsx  ViewShell.tsx
src/stores/: connectionStore.ts  logStore.ts  nodeEditorStore.ts  profileStore.ts  routingStore.ts  settingsStore.ts  statsStore.ts  toastStore.ts
src/utils/: errors.ts  migrate.ts  store.ts  uuid.ts
src/views/: ConfigView.tsx  ConnectionsView.tsx  DashboardView.tsx  (+5 more)
(+23 files in other folders)
