[package]
name = "xlink"
version = "0.1.0"
description = "X-Link Desktop Proxy Client"
authors = ["Antigravity"]
edition = "2021"

[lib]
name = "xlink_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
sysproxy = "0.3"
is_elevated = "0.1"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
base64 = "0.22"
log = "0.4"
url = "2.5"
percent-encoding = "2.3"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
